let's see overflow-x filx fix scroll to top issue

--- a/next/pages/app.css
+++ b/next/pages/app.css
@@ -1,5 +1,6 @@
 body {
   font-size: 16px;
+  overflow-x: clip !important;
 }
 input,
 select {
